my-wx-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wx-app
spec:
  selector:
    matchLabels:
      app: my-wx-app
  replicas: 4
  template:
    metadata:
      labels:
        app: my-wx-app
    spec:
      containers:
      - name: my-wx-app
        image: arvindgorur/my-wx-app:latest
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-wx-app-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  type: NodePort
  selector:
    app: my-wx-app
