default-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
spec:
  backend:
      serviceName: my-wx-app-service
      servicePort: 80
